--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Use an icon that exists under the base path -->
+    <link rel="icon" type="image/png" href="/solar-charge-frontend/icons/solar-charge-192x192.png" />
+    <!-- iOS app icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/solar-charge-frontend/icons/apple-touch-icon-180x180.png" />
+    <!-- PWA manifest -->
+    <link rel="manifest" href="/solar-charge-frontend/manifest.webmanifest" />
+    <!-- Theme color should match manifest theme_color -->
+    <meta name="theme-color" content="#111827" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>Solar Charge</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+
+    <!-- Register the service worker via vite-plugin-pwa -->
+    <script type="module">
+      import { registerSW } from 'virtual:pwa-register'
+      registerSW({ immediate: true })
+    </script>
   </body>
 </html>
